[tool.poetry]
name = "bot-menu"
version = "0.1.0"
description = ""
authors = ["Дмитрий Афанасьев <wackymc@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
pydantic-settings = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
